将日志保存进sqlite